ele maj tableau 2d done

--- a/knn.ipynb
+++ b/knn.ipynb
@@ -1648,7 +1648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 120,
    "id": "3141c847-82e8-4583-8ae2-52328a548280",
    "metadata": {
     "deletable": false,
@@ -1668,9 +1668,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Griffondor', 'Griffondor', 'Griffondor', 'Serdaigle', 'Serpentar']\n",
-      "['Griffondor']\n"
+      "[9, 9, 10, 2, 10]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[9, 10]"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1688,8 +1697,7 @@
     "        return None\n",
     "\n",
     "    else:\n",
-    "        col = [t[i][num_col] for i in range(n)]\n",
-    "        print(col)\n",
+    "        col = [row[num_col] for row in t]\n",
     "        for e in col:\n",
     "            if e in d:\n",
     "                d[e] += 1\n",
@@ -1702,7 +1710,17 @@
     "            if val == elemM:\n",
     "                res.append(cle)\n",
     "\n",
-    "        return res"
+    "        return res\n",
+    "    \n",
+    "poudlard = [\n",
+    "    [\"Adam\", 9, 4, 7, 10, \"Serpentar\"],\n",
+    "    [\"Ahmed\", 9, 3, 4, 7, \"Griffondor\"], \n",
+    "    [\"Albertine\", 10, 6, 5, 9, \"Griffondor\"], \n",
+    "    [\"André\", 2, 8, 8, 3, \"Serdaigle\"],\n",
+    "    [\"Angelina\", 10, 4, 2, 5, \"Griffondor\"]\n",
+    "]\n",
+    "\n",
+    "elemMajoritaire2D(poudlard,5,6,1)"
    ]
   },
   {
@@ -1730,7 +1748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 121,
    "id": "af9e8b68-16a5-4a4b-b8b6-fa53315c356d",
    "metadata": {
     "deletable": false,
@@ -1752,7 +1770,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Griffondor', 'Griffondor', 'Griffondor', 'Serdaigle', 'Serpentar']\n"
+      "['Serpentar', 'Griffondor', 'Griffondor', 'Serdaigle', 'Griffondor']\n"
      ]
     }
    ],
@@ -1788,7 +1806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 130,
    "id": "9b16181a-d6bc-4cbe-a134-1e089528f333",
    "metadata": {
     "deletable": false,
@@ -1805,25 +1823,28 @@
    },
    "outputs": [
     {
-     "ename": "NotImplementedError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNotImplementedError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m/home/nadir/Desktop/knn-M1/knn.ipynb Cell 67\u001b[0m line \u001b[0;36m2\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/nadir/Desktop/knn-M1/knn.ipynb#Y123sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# ENTRER VOTRE CODE A LA PLACE DE CES 2 LIGNES\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/nadir/Desktop/knn-M1/knn.ipynb#Y123sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mraise\u001b[39;00m \u001b[39mNotImplementedError\u001b[39;00m()\n",
-      "\u001b[0;31mNotImplementedError\u001b[0m: "
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Adam', 'Ahmed', 'Albertine', 'André', 'Angelina']\n",
+      "[9, 9, 10, 2, 10]\n",
+      "[4, 3, 6, 8, 4]\n",
+      "[7, 4, 5, 8, 2]\n",
+      "[10, 7, 9, 3, 5]\n"
      ]
     }
    ],
    "source": [
-    "# ENTRER VOTRE CODE A LA PLACE DE CES 2 LIGNES\n",
-    "raise NotImplementedError()"
+    "assert elemMajoritaire2D(poudlard,len(poudlard),len(poudlard[0]),0) == [row[0] for row in poudlard]\n",
+    "assert elemMajoritaire2D(poudlard,len(poudlard),len(poudlard[0]),1) == [9,10]\n",
+    "assert elemMajoritaire2D(poudlard,len(poudlard),len(poudlard[0]),2) == [4]\n",
+    "assert elemMajoritaire2D(poudlard,len(poudlard),len(poudlard[0]),3) == [row[3] for row in poudlard]\n",
+    "assert elemMajoritaire2D(poudlard,len(poudlard),len(poudlard[0]),4) == [row[4] for row in poudlard]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 131,
    "id": "f111522e-f371-4f73-87ed-36669db83dfe",
    "metadata": {
     "deletable": false,
@@ -1949,7 +1970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 132,
    "id": "b29a9386-1332-490c-a81d-fe7834930583",
    "metadata": {
     "deletable": false,
@@ -2006,7 +2027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 133,
    "id": "117ad6b9-79f8-4454-9c26-afbf22a9f323",
    "metadata": {
     "deletable": false,
@@ -2023,7 +2044,20 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NotImplementedError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNotImplementedError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m/home/nadir/Desktop/knn-M1/knn.ipynb Cell 75\u001b[0m line \u001b[0;36m1\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/nadir/Desktop/knn-M1/knn.ipynb#Y134sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# Exécuter cette cellule sans la modifier, ni écrire dedans\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/nadir/Desktop/knn-M1/knn.ipynb#Y134sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39m# Son exécution ne doit pas déclencher d'erreur \u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/nadir/Desktop/knn-M1/knn.ipynb#Y134sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m poudlard \u001b[39m=\u001b[39m [\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/nadir/Desktop/knn-M1/knn.ipynb#Y134sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     [\u001b[39m\"\u001b[39m\u001b[39mAdam\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m9\u001b[39m, \u001b[39m4\u001b[39m, \u001b[39m7\u001b[39m, \u001b[39m10\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mSerpentar\u001b[39m\u001b[39m\"\u001b[39m],\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/nadir/Desktop/knn-M1/knn.ipynb#Y134sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     [\u001b[39m\"\u001b[39m\u001b[39mAhmed\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m9\u001b[39m, \u001b[39m3\u001b[39m, \u001b[39m4\u001b[39m, \u001b[39m7\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mGriffondor\u001b[39m\u001b[39m\"\u001b[39m], \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/nadir/Desktop/knn-M1/knn.ipynb#Y134sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m     [\u001b[39m\"\u001b[39m\u001b[39mAngelina\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m10\u001b[39m, \u001b[39m4\u001b[39m, \u001b[39m2\u001b[39m, \u001b[39m5\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mGriffondor\u001b[39m\u001b[39m\"\u001b[39m]\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/nadir/Desktop/knn-M1/knn.ipynb#Y134sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m ]\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/nadir/Desktop/knn-M1/knn.ipynb#Y134sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39massert\u001b[39;00m distM(\u001b[39m0\u001b[39;49m, \u001b[39m0\u001b[39;49m, (\u001b[39m1\u001b[39;49m,\u001b[39m2\u001b[39;49m,\u001b[39m3\u001b[39;49m,\u001b[39m4\u001b[39;49m), poudlard, \u001b[39m5\u001b[39;49m, \u001b[39m6\u001b[39;49m) \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m  \u001b[39m# distance entre Adam et lui-même\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/nadir/Desktop/knn-M1/knn.ipynb#Y134sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39massert\u001b[39;00m distM(\u001b[39m0\u001b[39m, \u001b[39m1\u001b[39m, (\u001b[39m1\u001b[39m,\u001b[39m2\u001b[39m,\u001b[39m3\u001b[39m,\u001b[39m4\u001b[39m), poudlard, \u001b[39m5\u001b[39m, \u001b[39m6\u001b[39m) \u001b[39m==\u001b[39m \u001b[39m7\u001b[39m\n",
+      "\u001b[1;32m/home/nadir/Desktop/knn-M1/knn.ipynb Cell 75\u001b[0m line \u001b[0;36m1\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/nadir/Desktop/knn-M1/knn.ipynb#Y134sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39massert\u001b[39;00m \u001b[39m0\u001b[39m \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m j \u001b[39m<\u001b[39m n \u001b[39mor\u001b[39;00m \u001b[39m-\u001b[39mn \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m j \u001b[39m<\u001b[39m \u001b[39m-\u001b[39m\u001b[39m1\u001b[39m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/nadir/Desktop/knn-M1/knn.ipynb#Y134sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39m# ENTRER VOTRE CODE A LA PLACE DE CES 2 LIGNES\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/nadir/Desktop/knn-M1/knn.ipynb#Y134sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39mraise\u001b[39;00m \u001b[39mNotImplementedError\u001b[39;00m()\n",
+      "\u001b[0;31mNotImplementedError\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "# Exécuter cette cellule sans la modifier, ni écrire dedans\n",
     "# Son exécution ne doit pas déclencher d'erreur \n",
