--- a/knn.ipynb
+++ b/knn.ipynb
@@ -1648,7 +1648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 142,
    "id": "3141c847-82e8-4583-8ae2-52328a548280",
    "metadata": {
     "deletable": false,
@@ -1663,25 +1663,7 @@
      "task": false
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[9, 9, 10, 2, 10]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[9, 10]"
-      ]
-     },
-     "execution_count": 120,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def elemMajoritaire2D(t : list[list[IntOrStr]], n: int, p: int, num_col: int) -> Union[int, str, None]:\n",
     "    '''retourne l'élément majoritaite de t tab2D de n lignes d'int ou str,\n",
@@ -1710,17 +1692,7 @@
     "            if val == elemM:\n",
     "                res.append(cle)\n",
     "\n",
-    "        return res\n",
-    "    \n",
-    "poudlard = [\n",
-    "    [\"Adam\", 9, 4, 7, 10, \"Serpentar\"],\n",
-    "    [\"Ahmed\", 9, 3, 4, 7, \"Griffondor\"], \n",
-    "    [\"Albertine\", 10, 6, 5, 9, \"Griffondor\"], \n",
-    "    [\"André\", 2, 8, 8, 3, \"Serdaigle\"],\n",
-    "    [\"Angelina\", 10, 4, 2, 5, \"Griffondor\"]\n",
-    "]\n",
-    "\n",
-    "elemMajoritaire2D(poudlard,5,6,1)"
+    "        return res"
    ]
   },
   {
@@ -1748,7 +1720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 143,
    "id": "af9e8b68-16a5-4a4b-b8b6-fa53315c356d",
    "metadata": {
     "deletable": false,
@@ -1765,15 +1737,7 @@
      "task": false
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Serpentar', 'Griffondor', 'Griffondor', 'Serdaigle', 'Griffondor']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Exécuter cette cellule sans la modifier, ni écrire dedans\n",
     "# Son exécution ne doit pas déclencher d'erreur \n",
@@ -1806,7 +1770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 144,
    "id": "9b16181a-d6bc-4cbe-a134-1e089528f333",
    "metadata": {
     "deletable": false,
@@ -1821,19 +1785,7 @@
      "task": false
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Adam', 'Ahmed', 'Albertine', 'André', 'Angelina']\n",
-      "[9, 9, 10, 2, 10]\n",
-      "[4, 3, 6, 8, 4]\n",
-      "[7, 4, 5, 8, 2]\n",
-      "[10, 7, 9, 3, 5]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "assert elemMajoritaire2D(poudlard,len(poudlard),len(poudlard[0]),0) == [row[0] for row in poudlard]\n",
     "assert elemMajoritaire2D(poudlard,len(poudlard),len(poudlard[0]),1) == [9,10]\n",
@@ -1844,7 +1796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 145,
    "id": "f111522e-f371-4f73-87ed-36669db83dfe",
    "metadata": {
     "deletable": false,
@@ -1970,7 +1922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 146,
    "id": "b29a9386-1332-490c-a81d-fe7834930583",
    "metadata": {
     "deletable": false,
@@ -2027,7 +1979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 147,
    "id": "117ad6b9-79f8-4454-9c26-afbf22a9f323",
    "metadata": {
     "deletable": false,
