--- a/knn.ipynb
+++ b/knn.ipynb
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 49,
    "id": "acc38a20-e856-4ef0-ad86-0d3254901d31",
    "metadata": {
     "deletable": false,
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 50,
    "id": "a923130a-7794-4703-bc50-8f30757d8b82",
    "metadata": {
     "deletable": false,
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 51,
    "id": "87cc4b57-7182-4e69-b6c0-7d5c62ac7ccf",
    "metadata": {
     "deletable": false,
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 52,
    "id": "1cec9e3c-1cfa-4865-9510-a852280fdd59",
    "metadata": {
     "deletable": false,
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 53,
    "id": "6119e752",
    "metadata": {
     "deletable": false,
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 54,
    "id": "35a37ae0-9f55-4164-a400-03182046aa86",
    "metadata": {
     "deletable": false,
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 55,
    "id": "ce9486e0-fad6-4d0c-b416-e5456d82efb7",
    "metadata": {
     "deletable": false,
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 56,
    "id": "188ba8ec",
    "metadata": {
     "deletable": false,
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 57,
    "id": "3a02bba6",
    "metadata": {
     "deletable": false,
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 58,
    "id": "e0edb292-5cfd-4be0-adfe-2215515b9a29",
    "metadata": {
     "deletable": false,
@@ -857,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 59,
    "id": "046a900f-d184-4171-84c0-6e68b3083698",
    "metadata": {
     "deletable": false,
@@ -1004,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 60,
    "id": "158fee43-2c5e-4010-8d5d-8bd8c87cf9e8",
    "metadata": {
     "deletable": false,
@@ -1055,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 61,
    "id": "a44b0fd6-899c-4d6a-8d9a-55bbba09de36",
    "metadata": {
     "deletable": false,
@@ -1127,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 62,
    "id": "15950f8c-c99b-4763-84bb-83f68537c26c",
    "metadata": {
     "deletable": false,
@@ -1187,7 +1187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 63,
    "id": "a8593698-7727-4b7d-94e2-d57d512ac31c",
    "metadata": {
     "deletable": false,
@@ -1250,7 +1250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 64,
    "id": "57a7ecfc-433c-447f-899e-038b19677500",
    "metadata": {
     "deletable": false,
@@ -1272,7 +1272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 65,
    "id": "feda2689",
    "metadata": {
     "deletable": false,
@@ -1325,7 +1325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 66,
    "id": "b3df0689-29f3-4bb3-8c68-60d3adb29ab1",
    "metadata": {
     "deletable": false,
@@ -1347,7 +1347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 67,
    "id": "8647dc06",
    "metadata": {
     "deletable": false,
@@ -1444,7 +1444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 68,
    "id": "38f6f272-9ca4-4411-8eaf-95c8bd8db45b",
    "metadata": {
     "deletable": false,
@@ -1459,15 +1459,7 @@
      "task": false
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2, 3]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def elemMajoritaire1D(t : list[int], n: int) -> Union[list[int], None]:\n",
     "    '''retourne l'élément majoritaite de t tab de n entiers ou None sinon'''\n",
@@ -1521,7 +1513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 69,
    "id": "3c8f6fe6-b64e-4f83-8137-9f61733fa7eb",
    "metadata": {
     "deletable": false,
@@ -1573,7 +1565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 70,
    "id": "742cdbd8-2d93-45e7-9a8d-f6665b001a2a",
    "metadata": {
     "deletable": false,
@@ -1599,7 +1591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 71,
    "id": "c385933c",
    "metadata": {
     "deletable": false,
@@ -1648,7 +1640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 72,
    "id": "3141c847-82e8-4583-8ae2-52328a548280",
    "metadata": {
     "deletable": false,
@@ -1720,7 +1712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 73,
    "id": "af9e8b68-16a5-4a4b-b8b6-fa53315c356d",
    "metadata": {
     "deletable": false,
@@ -1770,7 +1762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 74,
    "id": "9b16181a-d6bc-4cbe-a134-1e089528f333",
    "metadata": {
     "deletable": false,
@@ -1796,7 +1788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 75,
    "id": "f111522e-f371-4f73-87ed-36669db83dfe",
    "metadata": {
     "deletable": false,
@@ -1922,7 +1914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 87,
    "id": "b29a9386-1332-490c-a81d-fe7834930583",
    "metadata": {
     "deletable": false,
@@ -1948,8 +1940,12 @@
     "        assert p == len(t[_])\n",
     "    assert 0 <= i < n or -n <= i < -1\n",
     "    assert 0 <= j < n or -n <= j < -1\n",
-    "    # ENTRER VOTRE CODE A LA PLACE DE CES 2 LIGNES\n",
-    "    raise NotImplementedError()"
+    "\n",
+    "    dist = 0\n",
+    "    for k in range(len(cols)):\n",
+    "        dist += abs(t[i][cols[k]]-t[j][cols[k]])\n",
+    "\n",
+    "    return dist\n"
    ]
   },
   {
@@ -1979,7 +1975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 88,
    "id": "117ad6b9-79f8-4454-9c26-afbf22a9f323",
    "metadata": {
     "deletable": false,
@@ -1996,20 +1992,7 @@
      "task": false
     }
    },
-   "outputs": [
-    {
-     "ename": "NotImplementedError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNotImplementedError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m/home/nadir/Desktop/knn-M1/knn.ipynb Cell 75\u001b[0m line \u001b[0;36m1\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/nadir/Desktop/knn-M1/knn.ipynb#Y134sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# Exécuter cette cellule sans la modifier, ni écrire dedans\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/nadir/Desktop/knn-M1/knn.ipynb#Y134sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39m# Son exécution ne doit pas déclencher d'erreur \u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/nadir/Desktop/knn-M1/knn.ipynb#Y134sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m poudlard \u001b[39m=\u001b[39m [\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/nadir/Desktop/knn-M1/knn.ipynb#Y134sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     [\u001b[39m\"\u001b[39m\u001b[39mAdam\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m9\u001b[39m, \u001b[39m4\u001b[39m, \u001b[39m7\u001b[39m, \u001b[39m10\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mSerpentar\u001b[39m\u001b[39m\"\u001b[39m],\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/nadir/Desktop/knn-M1/knn.ipynb#Y134sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     [\u001b[39m\"\u001b[39m\u001b[39mAhmed\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m9\u001b[39m, \u001b[39m3\u001b[39m, \u001b[39m4\u001b[39m, \u001b[39m7\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mGriffondor\u001b[39m\u001b[39m\"\u001b[39m], \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/nadir/Desktop/knn-M1/knn.ipynb#Y134sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m     [\u001b[39m\"\u001b[39m\u001b[39mAngelina\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m10\u001b[39m, \u001b[39m4\u001b[39m, \u001b[39m2\u001b[39m, \u001b[39m5\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mGriffondor\u001b[39m\u001b[39m\"\u001b[39m]\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/nadir/Desktop/knn-M1/knn.ipynb#Y134sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m ]\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/nadir/Desktop/knn-M1/knn.ipynb#Y134sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39massert\u001b[39;00m distM(\u001b[39m0\u001b[39;49m, \u001b[39m0\u001b[39;49m, (\u001b[39m1\u001b[39;49m,\u001b[39m2\u001b[39;49m,\u001b[39m3\u001b[39;49m,\u001b[39m4\u001b[39;49m), poudlard, \u001b[39m5\u001b[39;49m, \u001b[39m6\u001b[39;49m) \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m  \u001b[39m# distance entre Adam et lui-même\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/nadir/Desktop/knn-M1/knn.ipynb#Y134sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39massert\u001b[39;00m distM(\u001b[39m0\u001b[39m, \u001b[39m1\u001b[39m, (\u001b[39m1\u001b[39m,\u001b[39m2\u001b[39m,\u001b[39m3\u001b[39m,\u001b[39m4\u001b[39m), poudlard, \u001b[39m5\u001b[39m, \u001b[39m6\u001b[39m) \u001b[39m==\u001b[39m \u001b[39m7\u001b[39m\n",
-      "\u001b[1;32m/home/nadir/Desktop/knn-M1/knn.ipynb Cell 75\u001b[0m line \u001b[0;36m1\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/nadir/Desktop/knn-M1/knn.ipynb#Y134sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39massert\u001b[39;00m \u001b[39m0\u001b[39m \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m j \u001b[39m<\u001b[39m n \u001b[39mor\u001b[39;00m \u001b[39m-\u001b[39mn \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m j \u001b[39m<\u001b[39m \u001b[39m-\u001b[39m\u001b[39m1\u001b[39m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/nadir/Desktop/knn-M1/knn.ipynb#Y134sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39m# ENTRER VOTRE CODE A LA PLACE DE CES 2 LIGNES\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/nadir/Desktop/knn-M1/knn.ipynb#Y134sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39mraise\u001b[39;00m \u001b[39mNotImplementedError\u001b[39;00m()\n",
-      "\u001b[0;31mNotImplementedError\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Exécuter cette cellule sans la modifier, ni écrire dedans\n",
     "# Son exécution ne doit pas déclencher d'erreur \n",
@@ -2049,7 +2032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "id": "c476f2fe",
    "metadata": {
     "deletable": false,
@@ -2066,13 +2049,16 @@
    },
    "outputs": [],
    "source": [
-    "# ENTRER VOTRE CODE A LA PLACE DE CES 2 LIGNES\n",
-    "raise NotImplementedError()"
+    "assert distM(2, 2, (1,2,3,4), poudlard, 5, 6) == 0  # distance entre Alertina et lui-même\n",
+    "assert distM(4, 4, (1,2,3,4), poudlard, 5, 6) == 0  # distance entre Angelina et lui-même\n",
+    "assert distM(0, 2, (1,2,3,4), poudlard, 5, 6) == 6  # distance entre Adam et Albertina\n",
+    "assert distM(0, 4, (1,2,3,4), poudlard, 5, 6) == 11  # distance entre Adam et Angelina\n",
+    "assert distM(2, 4, (1,2,3,4), poudlard, 5, 6) == 9  # distance entre Albertina et Angelina"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "id": "8c7178a0",
    "metadata": {
     "deletable": false,
@@ -2154,7 +2140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "id": "dcb24b9a-7dbf-4976-ba79-231a502a4eaa",
    "metadata": {
     "deletable": false,
@@ -2237,7 +2223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "id": "4bfeab82-f5e7-4af6-8347-7b648ea0a52f",
    "metadata": {
     "deletable": false,
@@ -2267,7 +2253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "id": "a7e0c51e",
    "metadata": {
     "deletable": false,
@@ -2314,7 +2300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "id": "3918d770-20b9-48b2-a98d-646a9b9e8c5d",
    "metadata": {
     "deletable": false,
@@ -2329,7 +2315,19 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NotImplementedError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNotImplementedError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m/home/nadir/Desktop/knn-M1/knn.ipynb Cell 87\u001b[0m line \u001b[0;36m2\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/nadir/Desktop/knn-M1/knn.ipynb#Y152sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# ENTRER VOTRE CODE A LA PLACE DE CES 2 LIGNES\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/nadir/Desktop/knn-M1/knn.ipynb#Y152sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mraise\u001b[39;00m \u001b[39mNotImplementedError\u001b[39;00m()\n",
+      "\u001b[0;31mNotImplementedError\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "# ENTRER VOTRE CODE A LA PLACE DE CES 2 LIGNES\n",
     "raise NotImplementedError()"
