--- a/knn.ipynb
+++ b/knn.ipynb
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 626,
    "id": "acc38a20-e856-4ef0-ad86-0d3254901d31",
    "metadata": {
     "deletable": false,
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 627,
    "id": "a923130a-7794-4703-bc50-8f30757d8b82",
    "metadata": {
     "deletable": false,
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 628,
    "id": "87cc4b57-7182-4e69-b6c0-7d5c62ac7ccf",
    "metadata": {
     "deletable": false,
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 629,
    "id": "1cec9e3c-1cfa-4865-9510-a852280fdd59",
    "metadata": {
     "deletable": false,
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 630,
    "id": "6119e752",
    "metadata": {
     "deletable": false,
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 631,
    "id": "35a37ae0-9f55-4164-a400-03182046aa86",
    "metadata": {
     "deletable": false,
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 632,
    "id": "ce9486e0-fad6-4d0c-b416-e5456d82efb7",
    "metadata": {
     "deletable": false,
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 633,
    "id": "188ba8ec",
    "metadata": {
     "deletable": false,
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 634,
    "id": "3a02bba6",
    "metadata": {
     "deletable": false,
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 635,
    "id": "e0edb292-5cfd-4be0-adfe-2215515b9a29",
    "metadata": {
     "deletable": false,
@@ -857,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 636,
    "id": "046a900f-d184-4171-84c0-6e68b3083698",
    "metadata": {
     "deletable": false,
@@ -1004,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 637,
    "id": "158fee43-2c5e-4010-8d5d-8bd8c87cf9e8",
    "metadata": {
     "deletable": false,
@@ -1055,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 638,
    "id": "a44b0fd6-899c-4d6a-8d9a-55bbba09de36",
    "metadata": {
     "deletable": false,
@@ -1127,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 639,
    "id": "15950f8c-c99b-4763-84bb-83f68537c26c",
    "metadata": {
     "deletable": false,
@@ -1187,7 +1187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 640,
    "id": "a8593698-7727-4b7d-94e2-d57d512ac31c",
    "metadata": {
     "deletable": false,
@@ -1250,7 +1250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 641,
    "id": "57a7ecfc-433c-447f-899e-038b19677500",
    "metadata": {
     "deletable": false,
@@ -1272,7 +1272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 642,
    "id": "feda2689",
    "metadata": {
     "deletable": false,
@@ -1325,7 +1325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 643,
    "id": "b3df0689-29f3-4bb3-8c68-60d3adb29ab1",
    "metadata": {
     "deletable": false,
@@ -1347,7 +1347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 644,
    "id": "8647dc06",
    "metadata": {
     "deletable": false,
@@ -1444,7 +1444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 645,
    "id": "38f6f272-9ca4-4411-8eaf-95c8bd8db45b",
    "metadata": {
     "deletable": false,
@@ -1513,7 +1513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 646,
    "id": "3c8f6fe6-b64e-4f83-8137-9f61733fa7eb",
    "metadata": {
     "deletable": false,
@@ -1565,7 +1565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 647,
    "id": "742cdbd8-2d93-45e7-9a8d-f6665b001a2a",
    "metadata": {
     "deletable": false,
@@ -1591,7 +1591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 648,
    "id": "c385933c",
    "metadata": {
     "deletable": false,
@@ -1640,7 +1640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 649,
    "id": "3141c847-82e8-4583-8ae2-52328a548280",
    "metadata": {
     "deletable": false,
@@ -1712,7 +1712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 650,
    "id": "af9e8b68-16a5-4a4b-b8b6-fa53315c356d",
    "metadata": {
     "deletable": false,
@@ -1762,7 +1762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 651,
    "id": "9b16181a-d6bc-4cbe-a134-1e089528f333",
    "metadata": {
     "deletable": false,
@@ -1788,7 +1788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 652,
    "id": "f111522e-f371-4f73-87ed-36669db83dfe",
    "metadata": {
     "deletable": false,
@@ -1914,7 +1914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 653,
    "id": "b29a9386-1332-490c-a81d-fe7834930583",
    "metadata": {
     "deletable": false,
@@ -1975,7 +1975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 654,
    "id": "117ad6b9-79f8-4454-9c26-afbf22a9f323",
    "metadata": {
     "deletable": false,
@@ -2032,7 +2032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 655,
    "id": "c476f2fe",
    "metadata": {
     "deletable": false,
@@ -2058,7 +2058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 656,
    "id": "8c7178a0",
    "metadata": {
     "deletable": false,
@@ -2140,7 +2140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 657,
    "id": "dcb24b9a-7dbf-4976-ba79-231a502a4eaa",
    "metadata": {
     "deletable": false,
@@ -2223,7 +2223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 658,
    "id": "4bfeab82-f5e7-4af6-8347-7b648ea0a52f",
    "metadata": {
     "deletable": false,
@@ -2248,18 +2248,23 @@
     "    for _ in range(n):\n",
     "        assert p == len(t[_])\n",
     "\n",
-    "    d = [0]*n\n",
+    "    d = [0] * n\n",
+    "    \n",
+    "    t.append(eleve)\n",
     "    for i in range(n):\n",
-    "        for j in range(1,p-1):\n",
-    "            d[i] += abs(eleve[j] - t[i][j])\n",
-    "        t[i].append(d[i])    \n",
+    "        d[i] = distM(i,n,(1,2,3,4),t,n+1,p)\n",
+    "\n",
+    "    t.pop()\n",
+    "\n",
+    "    for i in range(n):\n",
+    "        t[i].append(d[i])\n",
     "\n",
     "    return t "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 659,
    "id": "a7e0c51e",
    "metadata": {
     "deletable": false,
@@ -2306,7 +2311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 660,
    "id": "3918d770-20b9-48b2-a98d-646a9b9e8c5d",
    "metadata": {
     "deletable": false,
@@ -2330,19 +2335,20 @@
     "    [\"André\",     2,   8,  8,   3, \"Serdaigle\"],\n",
     "    [\"Angelina\",  10,  4,  2,   5, \"Griffondor\"]\n",
     "]\n",
+    "eleve_bientot_celebre = (\"Hermione\", 8, 6, 6, 6, \"\")\n",
     "\n",
-    "assert proximitesNouvelEleve(eleve_bientot_celebre,poudlard,len(poudlard),len(poudlard[0])) == [\n",
-    "    ['Adam', 9, 4, 7, 10, 'Serpentar', 8], \n",
-    "    ['Ahmed', 9, 3, 4, 7, 'Griffondor', 7], \n",
-    "    ['Albertine', 10, 6, 5, 9, 'Griffondor', 6], \n",
-    "    ['André', 2, 8, 8, 3, 'Serdaigle', 13], \n",
-    "    ['Angelina', 10, 4, 2, 5, 'Griffondor', 9]\n",
+    "assert proximitesNouvelEleve(eleve_bientot_celebre,poudlard,5,6) == [\n",
+    " ['Adam', 9, 4, 7, 10, 'Serpentar', 8], \n",
+    " ['Ahmed', 9, 3, 4, 7, 'Griffondor', 7], \n",
+    " ['Albertine', 10, 6, 5, 9, 'Griffondor', 6], \n",
+    " ['André', 2, 8, 8, 3, 'Serdaigle', 13], \n",
+    " ['Angelina', 10, 4, 2, 5, 'Griffondor', 9]\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 661,
    "id": "84f7171e",
    "metadata": {
     "deletable": false,
@@ -2423,7 +2429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 662,
    "id": "f50eb314-fbd5-4b36-b39d-dd440d78da4e",
    "metadata": {
     "deletable": false,
@@ -2477,7 +2483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 663,
    "id": "fb01dcdd-dbe0-48fa-b74b-7466c6d018f3",
    "metadata": {
     "deletable": false,
