k plu proches trie

--- a/knn.ipynb
+++ b/knn.ipynb
@@ -2429,7 +2429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 662,
+   "execution_count": 664,
    "id": "f50eb314-fbd5-4b36-b39d-dd440d78da4e",
    "metadata": {
     "deletable": false,
@@ -2454,8 +2454,19 @@
     "    assert n == len(t)\n",
     "    for _ in range(n):\n",
     "        assert p == len(t[_])\n",
-    "    # ENTRER VOTRE CODE A LA PLACE DE CES 2 LIGNES\n",
-    "    raise NotImplementedError()"
+    "    \n",
+    "    d = [0] * n\n",
+    "    \n",
+    "    t.append(eleve)\n",
+    "    for i in range(n):\n",
+    "        d[i] = distM(i,n,(1,2,3,4),t,n+1,p)\n",
+    "\n",
+    "    t.pop()\n",
+    "\n",
+    "    for i in range(n):\n",
+    "        t[i].append(d[i])\n",
+    "\n",
+    "    return tri2D_selection(t,n,p+1,p) "
    ]
   },
   {
@@ -2483,7 +2494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 663,
+   "execution_count": 665,
    "id": "fb01dcdd-dbe0-48fa-b74b-7466c6d018f3",
    "metadata": {
     "deletable": false,
@@ -2500,20 +2511,7 @@
      "task": false
     }
    },
-   "outputs": [
-    {
-     "ename": "NotImplementedError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNotImplementedError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m/home/nadir/Desktop/knn-M1/knn.ipynb Cell 93\u001b[0m line \u001b[0;36m1\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/nadir/Desktop/knn-M1/knn.ipynb#Y161sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m poudlard \u001b[39m=\u001b[39m [\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/nadir/Desktop/knn-M1/knn.ipynb#Y161sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     [\u001b[39m\"\u001b[39m\u001b[39mAdam\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m9\u001b[39m, \u001b[39m4\u001b[39m, \u001b[39m7\u001b[39m, \u001b[39m10\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mSerpentar\u001b[39m\u001b[39m\"\u001b[39m],\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/nadir/Desktop/knn-M1/knn.ipynb#Y161sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     [\u001b[39m\"\u001b[39m\u001b[39mAhmed\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m9\u001b[39m, \u001b[39m3\u001b[39m, \u001b[39m4\u001b[39m, \u001b[39m7\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mGriffondor\u001b[39m\u001b[39m\"\u001b[39m], \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/nadir/Desktop/knn-M1/knn.ipynb#Y161sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m     [\u001b[39m\"\u001b[39m\u001b[39mAngelina\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m10\u001b[39m, \u001b[39m4\u001b[39m, \u001b[39m2\u001b[39m, \u001b[39m5\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mGriffondor\u001b[39m\u001b[39m\"\u001b[39m]\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/nadir/Desktop/knn-M1/knn.ipynb#Y161sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m ]\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/nadir/Desktop/knn-M1/knn.ipynb#Y161sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m eleve_bientot_celebre \u001b[39m=\u001b[39m (\u001b[39m\"\u001b[39m\u001b[39mHermione\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m8\u001b[39m, \u001b[39m6\u001b[39m, \u001b[39m6\u001b[39m, \u001b[39m6\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/nadir/Desktop/knn-M1/knn.ipynb#Y161sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m poudlard \u001b[39m=\u001b[39m proximitesNouvelEleve(eleve_bientot_celebre, poudlard, \u001b[39mlen\u001b[39;49m(poudlard), \u001b[39mlen\u001b[39;49m(poudlard[\u001b[39m0\u001b[39;49m]))\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/nadir/Desktop/knn-M1/knn.ipynb#Y161sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m res \u001b[39m=\u001b[39m [\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/nadir/Desktop/knn-M1/knn.ipynb#Y161sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m     [\u001b[39m'\u001b[39m\u001b[39mAlbertine\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m10\u001b[39m, \u001b[39m6\u001b[39m, \u001b[39m5\u001b[39m, \u001b[39m9\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mGriffondor\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m6\u001b[39m], \n\u001b[1;32m     <a href='vscode-notebook-cell:/home/nadir/Desktop/knn-M1/knn.ipynb#Y161sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m     [\u001b[39m'\u001b[39m\u001b[39mAhmed\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m9\u001b[39m, \u001b[39m3\u001b[39m, \u001b[39m4\u001b[39m, \u001b[39m7\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mGriffondor\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m7\u001b[39m], \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/nadir/Desktop/knn-M1/knn.ipynb#Y161sZmlsZQ%3D%3D?line=19'>20</a>\u001b[0m     [\u001b[39m'\u001b[39m\u001b[39mAndré\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m2\u001b[39m, \u001b[39m8\u001b[39m, \u001b[39m8\u001b[39m, \u001b[39m3\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mSerdaigle\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m13\u001b[39m]\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/nadir/Desktop/knn-M1/knn.ipynb#Y161sZmlsZQ%3D%3D?line=20'>21</a>\u001b[0m ]\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/nadir/Desktop/knn-M1/knn.ipynb#Y161sZmlsZQ%3D%3D?line=22'>23</a>\u001b[0m \u001b[39massert\u001b[39;00m res \u001b[39m==\u001b[39m poudlard\n",
-      "\u001b[1;32m/home/nadir/Desktop/knn-M1/knn.ipynb Cell 93\u001b[0m line \u001b[0;36m1\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/nadir/Desktop/knn-M1/knn.ipynb#Y161sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m     \u001b[39massert\u001b[39;00m p \u001b[39m==\u001b[39m \u001b[39mlen\u001b[39m(t[_])\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/nadir/Desktop/knn-M1/knn.ipynb#Y161sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39m# ENTRER VOTRE CODE A LA PLACE DE CES 2 LIGNES\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/nadir/Desktop/knn-M1/knn.ipynb#Y161sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39mraise\u001b[39;00m \u001b[39mNotImplementedError\u001b[39;00m()\n",
-      "\u001b[0;31mNotImplementedError\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Exécuter cette cellule sans la modifier, ni écrire dedans\n",
     "# Son exécution ne doit pas déclencher d'erreur \n",
@@ -2570,7 +2568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 666,
    "id": "6997ca70-db98-4f34-bdba-7a04881697f0",
    "metadata": {
     "deletable": false,
@@ -2621,7 +2619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 667,
    "id": "360c3963-9407-4713-9369-e8c1bff80214",
    "metadata": {
     "deletable": false,
@@ -2636,7 +2634,19 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NotImplementedError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNotImplementedError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m/home/nadir/Desktop/knn-M1/knn.ipynb Cell 97\u001b[0m line \u001b[0;36m2\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/nadir/Desktop/knn-M1/knn.ipynb#Y165sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# ENTRER VOTRE CODE A LA PLACE DE CES 2 LIGNES\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/nadir/Desktop/knn-M1/knn.ipynb#Y165sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mraise\u001b[39;00m \u001b[39mNotImplementedError\u001b[39;00m()\n",
+      "\u001b[0;31mNotImplementedError\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "# ENTRER VOTRE CODE A LA PLACE DE CES 2 LIGNES\n",
     "raise NotImplementedError()"
