--- a/knn.ipynb
+++ b/knn.ipynb
@@ -2568,7 +2568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 666,
+   "execution_count": 679,
    "id": "6997ca70-db98-4f34-bdba-7a04881697f0",
    "metadata": {
     "deletable": false,
@@ -2590,8 +2590,12 @@
     "    assert n == len(t)\n",
     "    for _ in range(n):\n",
     "        assert p == len(t[_])\n",
-    "    # ENTRER VOTRE CODE A LA PLACE DE CES 2 LIGNES\n",
-    "    raise NotImplementedError()"
+    "\n",
+    "    m = [[0 for i in range(p+1)] for _ in range(k)]\n",
+    "    for i in range(k):\n",
+    "        m[i] = t[i]\n",
+    "    \n",
+    "    return m"
    ]
   },
   {
@@ -2619,7 +2623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 667,
+   "execution_count": 680,
    "id": "360c3963-9407-4713-9369-e8c1bff80214",
    "metadata": {
     "deletable": false,
@@ -2634,27 +2638,21 @@
      "task": false
     }
    },
-   "outputs": [
-    {
-     "ename": "NotImplementedError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNotImplementedError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m/home/nadir/Desktop/knn-M1/knn.ipynb Cell 97\u001b[0m line \u001b[0;36m2\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/nadir/Desktop/knn-M1/knn.ipynb#Y165sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# ENTRER VOTRE CODE A LA PLACE DE CES 2 LIGNES\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/nadir/Desktop/knn-M1/knn.ipynb#Y165sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mraise\u001b[39;00m \u001b[39mNotImplementedError\u001b[39;00m()\n",
-      "\u001b[0;31mNotImplementedError\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# ENTRER VOTRE CODE A LA PLACE DE CES 2 LIGNES\n",
-    "raise NotImplementedError()"
+    "res = [\n",
+    "    ['Albertine', 10, 6, 5, 9, 'Griffondor', 6], \n",
+    "    ['Ahmed', 9, 3, 4, 7, 'Griffondor', 7], \n",
+    "    ['Adam', 9, 4, 7, 10, 'Serpentar', 8], \n",
+    "    ['Angelina', 10, 4, 2, 5, 'Griffondor', 9], \n",
+    "    ['André', 2, 8, 8, 3, 'Serdaigle', 13]\n",
+    "]\n",
+    "assert kPlusProches(3,res,5,7) == [['Albertine', 10, 6, 5, 9, 'Griffondor', 6], ['Ahmed', 9, 3, 4, 7, 'Griffondor', 7], ['Adam', 9, 4, 7, 10, 'Serpentar', 8]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 681,
    "id": "16dbc196",
    "metadata": {
     "deletable": false,
@@ -2774,7 +2772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 682,
    "id": "cf57ab1b-1491-42ae-a969-e8302d531833",
    "metadata": {
     "deletable": false,
@@ -2789,7 +2787,19 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NotImplementedError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNotImplementedError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m/home/nadir/Desktop/knn-M1/knn.ipynb Cell 102\u001b[0m line \u001b[0;36m2\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/nadir/Desktop/knn-M1/knn.ipynb#Y203sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# ENTRER VOTRE CODE A LA PLACE DE CES 2 LIGNES\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/nadir/Desktop/knn-M1/knn.ipynb#Y203sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mraise\u001b[39;00m \u001b[39mNotImplementedError\u001b[39;00m()\n",
+      "\u001b[0;31mNotImplementedError\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "# ENTRER VOTRE CODE A LA PLACE DE CES 2 LIGNES\n",
     "raise NotImplementedError()"
